- Ajout fonctionnalité "Scroll to top" visible uniquement sur mobile * Si le contenu de la page est suffisamment conséquent et que l'user doit scroll, on affiche une flèche pour retourner en haut de page  -> Création classe .scrollToTop dans "main.css"  -> Ajout event listener sur le scroll de la fenêtre dans "main.js" pour afficher ou non la flèche si l'on est sur mobile  -> Modification vue de base "base.html.twig"  -> Fix margin bottom dans "profil.css" pour la vue "profil_perso.html.twig"

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -14,6 +14,12 @@ footer {
     font-size:0.8em;
 }
 
+.scrollToTop {
+    position:absolute;
+    bottom:40px;
+    text-align: right;
+}
+
 body {
     font-family: Roboto, Helvetica, Arial, sans-serif;
     overflow-x: hidden;
