--- a/web/css/profil.css
+++ b/web/css/profil.css
@@ -44,6 +44,7 @@
     border:1px solid #C5CAE9;
     margin-top:25px;
     background-color: #E8EAF6;
+    margin-bottom: 30px;
 }
 
 form, .profil__container--padding {
